prevent keyboard shortcuts on shift or alt key

--- a/src/style.css
+++ b/src/style.css
@@ -283,7 +283,7 @@ select option {
 }
 
 #controls {
-  margin-top: 1em;
+  margin-top: 1.5em;
   font-family: Arial, sans-serif;
   color: #333;
 }
